--- a/index.html
+++ b/index.html
@@ -16,7 +16,73 @@
 
 </head>
 <body class="font-raleway">
-    <header>
+    <!-- box-shadow remaining -->
+    <header class="w-5/6 mx-auto pt-5 lg:pt-12">
+        <!-- Nav -->
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Destination</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                  </div>
+                  <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">i-Tickets</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Destination</a></li>
+                    <li><a>Search</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                  <a class="btn bg-[#1cd1001A] rounded-xl text-[#1dd100] border-[#1dd10066] px-4 lg:px-8 text-xl">Bus <img src="images/bus-icon.png" alt=""></a> 
+
+                </div>
+              </div>
+        </nav>
+
+        <!-- Banner -->
+
+        <div class="bg-[url('images/banner.png')] bg-no-repeat lg:h-[550px] bg-cover mt-6 lg:mt-10 rounded-[40px]
+        flex flex-col items-center relative">
+            <h1 class="text-white text-center text-4xl lg:text-6xl font-extrabold pt-20 ">End-to-End Travel with <br>
+            <span class="text-[#1dd100]">i-Tickets</span></h1>
+            <p class="text-white text-center text-lg mt-10 w-[240px] lg:w-[690px] mx-auto">Streamline your travel with our easy-to-use online ticket platform. Browse routes, choose seats, and book securely tickets in minutes. Skip the lines and enjoy stress-free journeys with us!</p>
+            <button class="btn bg-[#1dd100] text-[#030712] text-xl font-bold rounded-xl hover:text-[#1dd100] hover:bg-white border-none px-8  h-16 m-9 ">Buy Tickets</button>
+
+            <div class="flex flex-col lg:flex-row gap-6 lg:absolute lg:bottom-[-50px]">
+                <div class="flex  bg-white p-8 rounded-3xl gap-4">
+                    <img src="images/people.png" alt="">
+                    <div>
+                        <h1 class="text-4xl font-inter text-[#030712] font-bold">500k+</h1>
+                        <p>Registered users</p>
+                    </div>
+                </div>
+                <div class="flex bg-white p-8 rounded-3xl gap-4">
+                    <img src="images/ticket-cupon.png" alt="">
+                    <div>
+                        <h1 class="text-4xl font-inter text-[#030712] font-bold">1.7 lacks</h1>
+                        <p>Tickets sold</p>
+                    </div>
+                </div>
+                <div class="flex bg-white p-8 rounded-3xl gap-4 shadow-[#1dd100]">
+                    <img src="images/stoppage.png" alt="">
+                    <div>
+                        <h1 class="text-4xl font-inter text-[#030712] font-bold">80k+</h1>
+                        <p>Rental partners</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
 
