--- a/index.html
+++ b/index.html
@@ -87,11 +87,42 @@
     </header>
 
     <main>
-
+        <!-- Best Offers -->
+        <section class="w-5/6 mx-auto pt-5 lg:pt-12 mt-32 ">
+            <h1 class="text-center text-5xl font-bold">Best offers for you</h1>
+            <div class="flex flex-col lg:flex-row justify-between gap-7 mt-12">
+                <div>
+                    <img src="images/Group 113.png" alt="">
+                </div>
+                <div>
+                    <img src="images/Rectangle 8.png" alt="">
+                </div>
+            </div>
+            <button></button>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="bg-[#030712] text-white mt-32">
+        <section class="w-5/6 mx-auto py-8  lg:py-32">
+            <div class="flex flex-col lg:flex-row justify-between gap-4">
+                <div><h1 class="text-4xl font-extrabold ">i-Tickets</h1>
+                    <p class="mt-4 opacity-80 font-inter  lg:w-[375px]">i-Tickets is a digital platform to make your daily commuting better.</p>
+                </div>
+                <div>
+                    <p class="px-4">Download our app</p>
+                    <img class="w-[180px] mt-3" src="images/en_badge_web_generic.png" alt="">
+                </div>
+            </div>
+            <hr class="border-[1.5px] border-[#ffffff4D] border-dashed mt-12 ">
+            <div class="flex flex-col lg:flex-row justify-between mt-12 font-inter gap-4">
+                <div><p class="text-[#ffffffB3]">@all rights reserved, i-Tickets services limited.2024</p></div>
+                <div class="flex justify-around gap-4 lg:gap-8">
+                    <p>Terms & condition</p> 
+                    <p>Return & refund policy</p>   
+                    <p>Privacy policy</p>
+                    </div>
+            </div>
+        </section>
     </footer>
 
     <script src="scripts/i-tickets.js"></script>
