--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a>Search</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">i-Tickets</a>
+                  <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold text-[#030712]">i-Tickets</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -92,14 +92,40 @@
             <h1 class="text-center text-5xl font-bold">Best offers for you</h1>
             <div class="flex flex-col lg:flex-row justify-between gap-7 mt-12">
                 <div>
-                    <img src="images/Group 113.png" alt="">
+                    <div class="bg-[#ffbf0f] rounded-3xl flex justify-around text-[#030712CC] ">
+                        <div class="p-12 mr-3 font-inter">
+                            <h3 class="text-4xl font-extrabold mb-2">15% OFF</h3>
+                            <p class="text-xl font-semibold mb-2">on your next purchase</p>
+                            <p class="text-lg font-medium text-[#03071280]">use by January 2024</p>
+                        </div>
+                        <img src="images/cupon-devider.png" alt="">
+                        <div class="px-14 py-16 text-center">
+                            <h4 class="text-3xl font-bold mb-2">NEW15</h4>
+                            <small class="text-xl font-medium text-[#03071280]">Coupon Code</small>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="images/Rectangle 8.png" alt="">
+                <div class="bg-[#f78c9c] rounded-3xl flex justify-around text-[#030712CC] ">
+                    <div class="p-12 mr-3 font-inter">
+                        <h3 class="text-4xl font-extrabold mb-2">20% OFF</h3>
+                        <p class="text-xl font-semibold mb-2">on your next purchase</p>
+                        <p class="text-lg font-medium text-[#03071280]">use by January 2024</p>
+                    </div>
+                    <img src="images/cupon-devider.png" alt="">
+                    <div class="p-16">
+                        <h4 class="text-3xl font-bold mb-2">Couple 20</h4>
+                        <small class="text-xl font-medium text-[#03071280] pl-2">Coupon Code</small>
+                    </div>
                 </div>
             </div>
-            <button></button>
+            <div class="flex justify-center">
+                <button class="btn bg-white border-[#1dd100] mt-16 px-8 h-16 text-xl font-bold text-[#1dd100]">See All Offers</button>
+            </div>
+            
         </section>
+
+        <!-- Ticket Booking  -->
+        <section class="border border-[#1dd100] rounded-t-[88px] mt-32"></section>
     </main>
 
     <footer class="bg-[#030712] text-white mt-32">
