--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
             <!-- Available Tickets -->
             <div class="w-5/6 mx-auto">
-                <h3 class="text-center text-[40px] font-bold mt-32">i-Tickets</h3>
+                <h3 class="text-center text-5xl font-bold mt-32">i-Tickets</h3>
                 <p class="text-center font-inter text-lg font-normal opacity-60 mt-6">Check available bus tickets and details here</p>
                 <!-- Bus Card -->
-                <div class="bg-white flex justify-between rounded-3xl px-4 lg:px-8 mt-12">
+                <div class="bg-white flex justify-between rounded-3xl px-4 lg:px-8 mt-12 ">
                     <div>
                         <div class="flex justify-between gap-10 lg:gap-60 py-4 lg:py-8">
                             <div class="flex gap-4">
@@ -172,7 +172,7 @@
                     <div>
                         <img class="h-full" src="images/info-devider.png" alt="">
                     </div>
-                    <div class="text-center  flex flex-col justify-center mr-5">
+                    <div class="text-center  flex flex-col justify-center mr-5 lg:pr-16">
                         <img class="w-10 h-10 mx-auto" src="images/fare.png" alt="">
                         <h4 class="text-3xl font-bold">550 Taka</h4>
                         <p class="text-2xl font-semibold">Per Seat</p>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="flex justify-between gap-8">
                             <button id="a3" class="btn text-lg font-medium bus-seats w-28 h-14">A3</button>
-                            <button id="a4" class="btn text-lg font-medium bus-seats  w-28 h-14">A4</button>
+                            <button id="a4" class="btn text-lg font-medium bus-seats w-28 h-14">A4</button>
                         </div>
                     </div>
                     </div>
@@ -235,7 +235,7 @@
                     </div>
                     </div>
                 </div>
-                <hr class="border-[2px] border-dashed  rotate-90 border-[#0307124D]">
+                <!-- <hr class="border-[2px] border-dashed  rotate-90 border-[#0307124D]"> -->
 
                 <!-- Billing Part -->
 
@@ -250,15 +250,17 @@
                             <p>Price</p>
                         </div>
                         <hr class="border-[1.5px] border-dashed mt-4">
+
                         <!-- tickert booking info -->
-                        <div class="flex justify-around gap-24 rounded-xl mt-4">
+
+                        <div id="seat-info" class="">
                             
                         </div>
 
                         <hr class="border-[1.5px] border-solid mt-6">
                         <div class="flex justify-between mt-4">
                             <h4 class="text-base font-medium font-inter">Total Price</h4>
-                            <p class="text-base font-medium font-inter">BDT <span id="">0</span></p>
+                            <p class="text-base font-medium font-inter">BDT <span id="total-price">0</span></p>
                         </div>
                         <div class="relative mt-4">
                             <input type="text" placeholder="Have any copupon?" class="focus:outline-none p-5 rounded-xl w-full">
@@ -266,10 +268,29 @@
                         </div>
                         <div class="flex justify-between mt-4">
                             <h4 class="text-base font-medium font-inter">Grand Total</h4>
-                            <p class="text-base font-medium font-inter">BDT <span>0</span></p>
+                            <p class="text-base font-medium font-inter">BDT <span id="grand-total">0</span></p>
                         </div>
                     </div>
-                    <button class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Next</button>
+
+                        <!-- You can open the modal using ID.showModal() method -->
+                    <button class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white" onclick="my_modal_4.showModal()">Next</button>
+                    <dialog id="my_modal_4" class="modal">
+                    <div class="modal-box w-11/12 max-w-5xl text-center p-14">
+                        <div class="flex justify-center">
+                            <img src="images/success.png" alt="">
+                        </div>
+                        <h1 class="text-2xl font-bold text-[#27ae60] mt-10 font-inter">SUCCESS</h1>
+                        <h3 class="text-xl text-[#4a4a4a font-medium] font-inter">Thank you for Booking Our Bus Seats. <br>
+                            We are working hard to find the best service and deals for you.</h3>
+                        <p class="text-xl text-[#4a4a4a font-light] mt-4 font-inter">Shortly you will find a confirmation in your email.</p>
+                        <div class="modal-action flex-none mt-5">
+                        <form method="dialog">
+                            <!-- if there is a button, it will close the modal -->
+                            <button class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Continue</button>
+                        </form>
+                        </div>
+                    </div>
+                    </dialog>
                 </div>
                 
             </div>
