--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <div class="modal-action flex-none mt-5">
                         <form method="dialog">
                             <!-- if there is a button, it will close the modal -->
-                            <button class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Continue</button>
+                            <button onclick="reloadPage()" class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Continue</button>
                         </form>
                         </div>
                     </div>
