--- a/index.html
+++ b/index.html
@@ -262,9 +262,13 @@
                             <h4 class="text-base font-medium font-inter">Total Price</h4>
                             <p class="text-base font-medium font-inter">BDT <span id="total-price">0</span></p>
                         </div>
-                        <div class="relative mt-4">
-                            <input type="text" placeholder="Have any copupon?" class="focus:outline-none p-5 rounded-xl w-full">
-                            <button class="btn bg-[#1dd100] text-white px-5 absolute right-3 top-2 font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Apply</button>
+                        <div id="discount-contaoner" class="flex justify-between mt-4 hidden">
+                            <h4 class="text-base font-medium font-inter">Discount </h4>
+                            <p class="text-base font-medium font-inter">BDT <span id="discount">0</span></p>
+                        </div> 
+                        <div id="input-field" class="relative mt-4">
+                            <input id="coupon-input" type="text" placeholder="Have any copupon?" class="focus:outline-none p-5 rounded-xl w-full">
+                            <button id="apply-btn" class="btn bg-[#1dd100] text-white px-5 absolute right-3 top-2 font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white">Apply</button>
                         </div>
                         <div class="flex justify-between mt-4">
                             <h4 class="text-base font-medium font-inter">Grand Total</h4>
@@ -273,7 +277,7 @@
                     </div>
 
                         <!-- You can open the modal using ID.showModal() method -->
-                    <button class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white" onclick="my_modal_4.showModal()">Next</button>
+                    <button id="next-btn" class="btn bg-[#1dd100] text-white px-5 mt-6 w-full font-inter text-base font-semibold hover:text-[#1dd100] hover:border-[#1dd100] hover:bg-white" onclick="my_modal_4.showModal()" disabled >Next</button>
                     <dialog id="my_modal_4" class="modal">
                     <div class="modal-box w-11/12 max-w-5xl text-center p-14">
                         <div class="flex justify-center">
